--- a/west.yml
+++ b/west.yml
@@ -279,7 +279,7 @@ manifest:
       revision: fb00b383072518c918e2258b0916c996f2d4eebe
       path: modules/lib/loramac-node
     - name: lvgl
-      revision: 2b498e6f36d6b82ae1da12c8b7742e318624ecf5
+      revision: pull/49/head
       path: modules/lib/gui/lvgl
     - name: mbedtls
       revision: 2f24831ee13d399ce019c4632b0bcd440a713f7c
